--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "paper-dialog-scrollable": "PolymerElements/paper-dialog-scrollable#^2.1.0",
     "paper-dialog": "PolymerElements/paper-dialog#^2.0.0",
     "paper-button": "PolymerElements/paper-button#^2.0.0",
-    "k-speech": "^1.0.2"
+    "k-speech": "^1.0.2",
+    "iron-form": "PolymerElements/iron-form#^2.0.1"
   },
   "resolutions": {
     "polymer": "^2.0.0"
